# dfp754

./: .gitlab-ci.yml  .travis.yml  Makefile.am  README.md  configure.ac
m4/: sxe-dfp754.m4
src/: Makefile.am  dfp754_d32.c  dfp754_d32.h  dfp754_d64.c  dfp754_d64.h  version.c.in
test/: Makefile.am  clitoris.c  pr-d32_01.c  pr-d32_01.clit  pr-d32_02.c  pr-d32_02.clit  pr-d64_01.c  pr-d64_01.clit  pr-d64_02.c  pr-d64_02.clit  quantized32_01.c  quantized32_01.clit  quantized64_01.c  quantized64_01.clit  rd-d32_01.c  rd-d64_01.c  scalbnd32_01.c  scalbnd32_01.clit  scalbnd32_02.c  scalbnd32_02.clit  scalbnd64_01.c  scalbnd64_01.clit  scalbnd64_02.c  scalbnd64_02.clit
